@@ -1,3 +1,7 @@
+2000-06-10  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* Weather eggs:  Storm.
+
 2000-06-07  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* Rewrote egg handling.
